Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12339

Text written with an input method or copypasted to TextEdit doesn't update internal text string

    XMLWordPrintable

Details

    • 0767c2ff719a35c16c72fac97e6ff612e8c71e21

    Description

      This causes 1.) text selection functionality to break and 2.) TextEdit to loose some of the text if textFormat property is changed after typing.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jpetrell Joona Petrell
            jpetrell Joona Petrell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes