Fix TextEdit text attribute and text stored in the internal QTextDocument having different contents

Task-number: QTBUG-12339
Reviewed-by: Martin Jones